--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,12 @@ theme:
   name: material
 
 markdown_extensions:
-  - pymdownx.arithmatex
+  - pymdownx.arithmatex:
+  	generic: true
+  	
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 
 plugins:
   - search
